Fix alignment header

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -466,7 +466,7 @@ main {
 
 .content-width {
   max-width: 100%;
-  width: 1240px;
+  width: var(--content-width);
   margin-left: auto;
   margin-right: auto;
   padding: 0 15px;
@@ -565,7 +565,7 @@ main {
   background-color: var(--work-bg);
   padding: 80px 0 140px;
   .container {
-    max-width: 1240px;
+    max-width: var(--content-width);
     margin: 0 auto;
     padding: 0 15px;
   }
@@ -642,20 +642,8 @@ main {
   }
 }
 @media all and (max-width: 1199px) {
-  header .logo {
-    left: 15px;
-  }
-
   .how-work-section {
     padding: 80px 0;
-  }
-
-  header .hero-flex .hero-info-img {
-    max-width: 420px;
-  }
-
-  header .hero-flex .hero-info {
-    width: calc(100% - 420px);
   }
 }
 
@@ -665,7 +653,7 @@ main {
     background-color: var(--color-white);
     display: block;
     .container {
-      max-width: 1240px;
+      max-width: var(--content-width);
       margin: 0 auto;
       padding: 0 15px;
     }
